Adds new welcome screen. Cleans old unused classes

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <title>www.marczuk.org</title>
 </head>
 <body>
+    <div style="font-family:supply_center; position: absolute; left:-1000px; visibility:hidden;">.</div>
     <script type="module" src="./main.js"></script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
