Adds meta data to SEO optimalization

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        
+    <!-- Essential Meta Tags -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="googlebot-news" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <link rel="canonical" href="https://www.marczuk.org" />
+    <title>Michał Marczuk's Interactive Resume | Explore My IT Skills in a Mario-Inspired World</title>
+    <meta name="description" content="Play through Michał Marczuk's interactive resume — a Mario-style platformer where you explore IT skills, experience, and fun challenges while getting to know a passionate IT engineer.">
+
+    <!-- SEO Keywords -->
+    <meta name="keywords" content="interactive resume, game resume, Mario resume, IT portfolio, IT engineer resume, gamified resume, Michał IT engineer, fun resume website, IT skills game, software IT engineer portfolio">
+
+    <!-- Author -->
+    <meta name="author" content="Michał">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Michał Marczuk's Interactive Resume | Gamified IT Journey">
+    <meta property="og:description" content="Jump into a Mario-style world to explore Michał Marczuk's IT skills and experience through gameplay. A fun and memorable way to learn about an IT engineer.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.marczuk.org">
+    <meta property="og:image" content="https://www.marczuk.org/assets/img/favicon.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Michał Marczuk's Gamified Resume">
+    <meta name="twitter:description" content="A Mario-style platformer resume where you can explore Michał Marczuk's IT experience in a unique and interactive way.">
+    <meta name="twitter:image" content="https://www.marczuk.org/assets/img/favicon.png">
+
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-    <title>www.marczuk.org</title>
 </head>
 <body>
     <div style="font-family:supply_center; position: absolute; left:-1000px; visibility:hidden;">.</div>
